--- a/__apps/altadb-frontend/package.json
+++ b/__apps/altadb-frontend/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "altadb-frontend",
+	"name": "altadb",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
