--- a/__apps/redbrick-frontend/package.json
+++ b/__apps/redbrick-frontend/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "redbrick-frontend",
+	"name": "redbrick",
 	"private": true,
-	"version": "1.0.0",
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
