--- a/__apps/altadb-frontend/package.json
+++ b/__apps/altadb-frontend/package.json
@@ -1,14 +1,16 @@
 {
 	"name": "altadb",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"releaseci": "release-it --ci",
+		"release": "release-it"
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
@@ -32,6 +34,6 @@
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
 		"vitest": "^1.6.0",
-		"@znt/release": "workspace:*"
+		"release-it": "15.10.1"
 	}
 }
