app - :zap: setup release-it config for redbrick

--- a/__apps/redbrick-frontend/.release-it.json
+++ b/__apps/redbrick-frontend/.release-it.json
@@ -6,11 +6,11 @@
 		"tag": true,
 		"getLatestTagFromAllRefs": false,
 		"commitsPath": ".",
-		"commitMessage": "RELEASE(altadb) - :zap: release version v${version}",
+		"commitMessage": "RELEASE(redbrick) - :zap: release version v${version}",
 		"requireCommits": true,
 		"requireCommitsFail": false,
 		"requireCleanWorkingDir": false,
-		"changelog": "git log --pretty=format:\"* %s by %an in (%h)\" ${from}...${to} --grep=\"(altadb)\" --grep=\"(ui)\""
+		"changelog": "git log --pretty=format:\"* %s by %an in (%h)\" ${from}...${to} --grep=\"(redbrick)\" --grep=\"(ui)\""
 	},
 	"npm": {
 		"publish": false,
